--- a/style.sass
+++ b/style.sass
@@ -1,9 +1,67 @@
 *
     font-family: 'Inter', sans-serif
+    font-weight: 400
+    margin: 0
+
+body
+    margin: 0
+
+header
+    padding: 68px 0 100px 0
+    background: linear-gradient(92.33deg, #087990 0.12%, #055160 100%)
+    color: #CFF4FC
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    h1
+        font-weight: 700
+        font-size: 72px
+        line-height: 87px
+    p
+        font-size: 21px
+        line-height: 36px
     
+main
+    background: #edeff3
+    display: flex
+    justify-content: center
+    input
+        position: absolute
+        top: 263px
+        max-width: 820px
+        width: 100%
+        height: 64px
+        border: 1px solid #CED4DA
+        border-radius: 4px
+        // padding: 22px 32px
+    section
+        display: grid
+        grid-template-columns: repeat(3, 1fr)
+        row-gap: 20px
+        column-gap: 19px
+        max-width: 986px
+        width: 100%
+        padding: 80px 0 47px 0
+
+footer
+    display: flex
+    justify-content: center
+    background: #edeff3
+    font-size: 16px
+    line-height: 21px
+    text-align: right
+    color: #6C757D
+    div
+        max-width: 986px
+        width: 100%
+        border-top: 1px solid #CED4DA
+        p
+            text-align: center
+            margin-top: 13px
+            margin-bottom: 17px
+
 .card
-    max-width: 316px
-    width: 100%
     padding: 24px
     border-radius: 4px
     outline: 1px solid #DEE2E6
@@ -11,6 +69,7 @@
     flex-direction: column
     align-items: center
     justify-content: center
+    background-color: #fff
     .emoji
         font-size: 48px
         margin-bottom: 18px
@@ -21,9 +80,7 @@
         text-decoration-line: underline
         margin: 0 0 12px 0
     p
-        font-weight: 400
         font-size: 12px
         line-height: 15px
         text-align: center
         color: #3F444A
-        margin: 0
