--- a/style.sass
+++ b/style.sass
@@ -26,14 +26,19 @@ main
     background: #edeff3
     display: flex
     justify-content: center
+    min-height: 519px
     input
         position: absolute
         top: 263px
-        max-width: 820px
+        max-width: 756px
         width: 100%
         height: 64px
         border: 1px solid #CED4DA
         border-radius: 4px
+        font-size: 24px
+        line-height: 21px
+        padding-left: 32px
+        padding-right: 32px
         // padding: 22px 32px
     section
         display: grid
@@ -70,9 +75,11 @@ footer
     align-items: center
     justify-content: center
     background-color: #fff
+    height: 138px
+
     .emoji
         font-size: 48px
-        margin-bottom: 18px
+        margin-bottom: 4px
     h2
         font-weight: 700
         font-size: 17px
