--- a/style/style.css
+++ b/style/style.css
@@ -31,15 +31,20 @@ main {
   background: #edeff3;
   display: flex;
   justify-content: center;
+  min-height: 519px;
 }
 main input {
   position: absolute;
   top: 263px;
-  max-width: 820px;
+  max-width: 756px;
   width: 100%;
   height: 64px;
   border: 1px solid #CED4DA;
   border-radius: 4px;
+  font-size: 24px;
+  line-height: 21px;
+  padding-left: 32px;
+  padding-right: 32px;
 }
 main section {
   display: grid;
@@ -80,10 +85,11 @@ footer div p {
   align-items: center;
   justify-content: center;
   background-color: #fff;
+  height: 138px;
 }
 .card .emoji {
   font-size: 48px;
-  margin-bottom: 18px;
+  margin-bottom: 4px;
 }
 .card h2 {
   font-weight: 700;
