--- a/style.sass
+++ b/style.sass
@@ -18,6 +18,8 @@ header
         font-weight: 700
         font-size: 72px
         line-height: 87px
+        &:hover
+            cursor: pointer
     p
         font-size: 21px
         line-height: 36px
