--- a/style/style.css
+++ b/style/style.css
@@ -22,6 +22,9 @@ header h1 {
   font-size: 72px;
   line-height: 87px;
 }
+header h1:hover {
+  cursor: pointer;
+}
 header p {
   font-size: 21px;
   line-height: 36px;
