--- a/style.sass
+++ b/style.sass
@@ -29,19 +29,23 @@ main
     display: flex
     justify-content: center
     min-height: 519px
-    input
+    .input__wrapper
         position: absolute
         top: 263px
         max-width: 756px
-        width: 100%
-        height: 64px
-        border: 1px solid #CED4DA
-        border-radius: 4px
-        font-size: 24px
-        line-height: 21px
-        padding-left: 32px
-        padding-right: 32px
-        // padding: 22px 32px
+        width: -webkit-fill-available
+        display: flex
+        justify-content: center
+        padding: 0 20px
+        input
+            width: 100%
+            height: 64px
+            border: 1px solid #CED4DA
+            border-radius: 4px
+            font-size: 24px
+            line-height: 21px
+            padding-left: 32px
+            padding-right: 32px
     section
         display: grid
         grid-template-columns: repeat(3, 1fr)
@@ -49,7 +53,7 @@ main
         column-gap: 19px
         max-width: 986px
         width: 100%
-        padding: 80px 0 47px 0
+        padding: 80px 20px 47px 20px
 
 footer
     display: flex
@@ -93,3 +97,12 @@ footer
         line-height: 15px
         text-align: center
         color: #3F444A
+    
+@media (max-width: 576px)
+    header
+        h1
+            font-size: 50px
+    
+    main
+        section
+            grid-template-columns: repeat(1, 1fr)
