--- a/style/style.css
+++ b/style/style.css
@@ -36,10 +36,16 @@ main {
   justify-content: center;
   min-height: 519px;
 }
-main input {
+main .input__wrapper {
   position: absolute;
   top: 263px;
   max-width: 756px;
+  width: -webkit-fill-available;
+  display: flex;
+  justify-content: center;
+  padding: 0 20px;
+}
+main .input__wrapper input {
   width: 100%;
   height: 64px;
   border: 1px solid #CED4DA;
@@ -56,7 +62,7 @@ main section {
   column-gap: 19px;
   max-width: 986px;
   width: 100%;
-  padding: 80px 0 47px 0;
+  padding: 80px 20px 47px 20px;
 }
 
 footer {
@@ -106,6 +112,15 @@ footer div p {
   line-height: 15px;
   text-align: center;
   color: #3F444A;
+}
+
+@media (max-width: 576px) {
+  header h1 {
+    font-size: 50px;
+  }
+  main section {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
