--- a/style.sass
+++ b/style.sass
@@ -97,6 +97,11 @@ footer
         line-height: 15px
         text-align: center
         color: #3F444A
+
+@media (max-width: 768px)
+    main
+        section
+            grid-template-columns: repeat(2, 1fr)
     
 @media (max-width: 576px)
     header
