--- a/style/style.css
+++ b/style/style.css
@@ -114,6 +114,11 @@ footer div p {
   color: #3F444A;
 }
 
+@media (max-width: 768px) {
+  main section {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 @media (max-width: 576px) {
   header h1 {
     font-size: 50px;
